--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ecommerce-backend",
+  "name": "desafio09",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -13,19 +12,22 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "bootstrap": "^5.2.3",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.7",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.0",
+    "mongoose": "^6.8.4",
     "mongoose-paginate-v2": "^1.7.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
-  }
+    "passport-local": "^1.0.0",
+    "sweetalert2": "^11.7.1"
+  },
+  "description": ""
 }
